finally fixed the body gradient flickering issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 
 
 body {
-  background: radial-gradient(ellipse at bottom, #2c4057 0%, #1c1f2f 100%);
-  height: 100vh;
+  /* background: radial-gradient(ellipse at bottom, #2c4057 0%, #1c1f2f 100%); */
+  height: 100%;
   /* overflow: hidden; */
   /* display: flex; */
   font-family: 'Anton', sans-serif;
@@ -579,4 +579,27 @@ a:active { text-decoration: none; }
   font-size:60px;
   
 }
+
+.customer-service-image{
+  height: 200px;
+  width: 400px;
+  margin-top: 0px;
+}
+
+.ux-image{
+  height: 200px;
+  width: 400px;
+  margin-top: 0px;
+}
+
+.rest-image{
+  height: 200px;
+  width: 400px;
+  margin-top: 0px;
+}
   
+.oop-image{
+  height: 200px;
+  width: 400px;
+  margin-top: 0px;
+}
